<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/layout_padding"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding"
        android:paddingTop="@dimen/layout_padding">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_1_option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question_1_option_1" />

            <RadioButton
                android:id="@+id/question_1_option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question_1_option_2" />

            <RadioButton
                android:id="@+id/question_1_option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question_1_option_3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question2_answer"
            android:paddingTop="@dimen/layout_padding"
            android:text="@string/question_2"
            android:textSize="@dimen/question_text_size" />

        <EditText
            android:id="@+id/question_2_answer"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/question_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/layout_padding"
            android:text="@string/question_3"
            android:textSize="@dimen/question_text_size" />

        <CheckBox
            android:id="@+id/question_3_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_option_1" />

        <CheckBox
            android:id="@+id/question_3_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_option_2" />

        <CheckBox
            android:id="@+id/question_3_option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_option_3" />

        <CheckBox
            android:id="@+id/question_3_option_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_option_4" />

        <TextView
            android:id="@+id/question_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question4_answer"
            android:paddingTop="@dimen/layout_padding"
            android:text="@string/question_4"
            android:textSize="@dimen/question_text_size" />


        <EditText
            android:id="@+id/question_4_answer"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submit_button_text" />

    </LinearLayout>

</ScrollView>